<resources>
    <string name="app_name">umc_android_chapter2_layout</string>
    <string name="tossbank_title">토스뱅크</string>
    <string name="tossbank_ad_title">공짜 비행기 표 이벤트</string>
    <string name="tossbank_ad_context">벌써 100명 당첨!</string>
    <string name="captital_title">자산</string>
    <string name="uribank_account">우리 SUPER주거래 통장</string>
    <string name="money1">n,nnn,nnn원</string>
    <string name="sinhanbank_account">신한 내일배움카드 통장</string>
    <string name="money2">nnn,nnn원</string>
    <string name="toss_share">증권 · 토스증권</string>
    <string name="send_money">송금</string>
    <string name="point">포인트 · 머니 · 1개</string>
    <string name="money3">nnn원</string>
    <string name="fund">투자</string>
    <string name="share">주식</string>
    <string name="money4">nn,nnn원</string>
    <string name="spend">소비</string>
    <string name="spend_for_a_month">이번 달 쓴 금액</string>
    <string name="home">홈</string>
    <string name="benefit">혜택</string>
    <string name="toss_pay">토스페이</string>
    <string name="total_option">전체</string>
    <string name="share_percent">+5.32%</string>
    <string name="option">환경 설정</string>
    <string name="capital_add">자산 추가</string>
    <string name="icon_capyright_clapping_ad_tossbank"><a href="https://www.flaticon.com/kr/free-icons/" title="박수 아이콘">박수 아이콘  제작자: bukeicon - Flaticon</a></string>
    <string name="share_title">투자 모아보기</string>
    <string name="icon_capyright_graph"><a href="https://www.flaticon.com/kr/free-icons/-" title="파이 차트 아이콘">파이 차트 아이콘  제작자: Andrean Prabowo - Flaticon</a></string>
    <string name="icon_capyright_live"><a href="https://www.flaticon.com/kr/free-icons/" title="라이브 아이콘">라이브 아이콘  제작자: srip - Flaticon</a></string>
    <string name="icon_capyright_dart"><a href="https://www.flaticon.com/kr/free-icons/-" title="다트 판 아이콘">다트 판 아이콘  제작자: Freepik - Flaticon</a></string>
    <string name="icon_capyright_shoes"><a href="https://www.flaticon.com/kr/free-icons/" title="운동화 아이콘">운동화 아이콘  제작자: BZZRINCANTATION - Flaticon</a></string>
    <string name="icon_capyright_megaphone"><a href="https://www.flaticon.com/kr/free-icons/" title="메가폰 아이콘">메가폰 아이콘  제작자: Freepik - Flaticon</a></string>
    <string name="icon_capyright_phone"><a href="https://www.flaticon.com/kr/free-icons/-" title="스마트 폰 아이콘">스마트 폰 아이콘  제작자: Freepik - Flaticon</a></string>
    <string name="icon_capyright_download"><a href="https://www.flaticon.com/kr/free-icons/-" title="사용자 인터페이스 아이콘">사용자 인터페이스 아이콘  제작자: Rizki Ahmad Fauzi - Flaticon</a></string>
    <string name="icon_capyright_P"><a href="https://www.flaticon.com/kr/free-icons/-p" title="편지 p 아이콘">편지 p 아이콘  제작자: Hight Quality Icons - Flaticon</a></string>
    <string name="icon_capyright_percent"><a href="https://www.flaticon.com/kr/free-icons/" title="백분율 아이콘">백분율 아이콘  제작자: Freepik - Flaticon</a></string>
    <string name="underline_string"><u>우리은행 1002123456789</u></string>
    <string name="icon_capyright_reload"><a href="https://www.flaticon.com/kr/free-icons/" title="일주 아이콘">일주 아이콘  제작자: Tanah Basah - Flaticon</a></string>
    <string name="icon_capyright_shopping_bag"><a href="https://www.flaticon.com/kr/free-icons/" title="쇼핑백 아이콘">쇼핑백 아이콘  제작자: IYAHICON - Flaticon</a></string>
    <string name="icon_capyright_store"><a href="https://www.flaticon.com/kr/free-icons/-" title="온라인 상점 아이콘">온라인 상점 아이콘  제작자: Freepik - Flaticon</a></string>
</resources>